# CLAS

./: .gitignore  CMakeLists.txt  README  README.md  generate_data.py  gpt_prompt.txt  gpt_suggestions.cpp  makeall.sh  paths.py  plots.py  remakeall.sh  visualize.py
Data/ilpd/: ILPD-features.csv
aux_chip/: TODO.md  main  main.cpp  types.cpp  types.hpp
chip/: CMakeLists.txt  analysis.md  chipcid.cpp  chipcid.hpp  computeExperts.hpp  strIDtochip.cpp  strIDtochip.hpp
chip/chip-clas/: CMakeLists.txt  chip.cpp  chip.hpp  label.cpp
chip/chip-clas/label/: chip.cpp  chip.hpp  label.cpp
chip/chip-clas/train/: computeExperts.cpp  computeHyperplanes.hpp  train.cpp
chip/rchip-clas/: CMakeLists.txt  label.cpp  rchip.cpp  rchip.hpp
chip/rchip-clas/label/: label.cpp  rchip.cpp  rchip.hpp
chip/rchip-clas/train/: computeExperts.cpp  computeHyperplanes.cpp  train.cpp
chip/train/: train.cpp
cluster_oriented/Common/: graphTypes.hpp  readFiles.cpp  writeFiles.cpp  writeFiles.hpp
cluster_oriented/Filter/: Makefile  filter
cluster_oriented/GabrielGraph/: Makefile  computeGabrielGraph.hpp  gabrielGraph
cluster_oriented/classifiers/Common/: Makefile  computeExperts.cpp  computeExperts.hpp  hyperplanes
cluster_oriented/classifiers/chip-clas/: Makefile  chip-clas  classify.hpp  label.cpp  label.hpp
cluster_oriented/classifiers/nn-clas/: Makefile  getSEs.cpp  getSEs.hpp  label.cpp  label.hpp  nn-clas  nn-clas.cpp
cluster_oriented/classifiers/rchip-clas/: Makefile  label.cpp  label.hpp  rchip-clas  rchip-clas.cpp
common/: CMakeLists.txt  classifier.pb.cc  classifier.pb.h  filenameHelpers.cpp  filter.cpp  filter.hpp  readFiles.cpp  readFiles.hpp  types.cpp  types.hpp  writeFiles.cpp  writeFiles.hpp
common_mk/: files.mk  flags.mk  rules.mk  targets.mk
cpp/Common/: graphTypes.cpp  graphTypes.hpp  printLoadedData.cpp  printLoadedData.hpp  readFiles.cpp  readFiles.hpp  squaredDistance.cpp  squaredDistance.hpp  stringHelpers.cpp  stringHelpers.hpp  writeFiles.cpp  writeFiles.hpp
cpp/Filter/: Makefile  computeFilter.cpp  computeFilter.hpp  filter  filter.cpp
cpp/GabrielGraph/: Makefile  computeGabrielGraph.cpp  computeGabrielGraph.hpp  gabrielGraph  gabrielGraph.cpp
cpp/classifiers/Common/: Makefile  computeExperts.cpp  computeExperts.hpp  hyperplanes  hyperplanes.cpp
cpp/classifiers/chip-clas/: Makefile  chip-clas  classify.cpp
cpp/classifiers/nn-clas/: Makefile  classify.cpp  classify.hpp  getSEs.cpp  getSEs.hpp  nn-clas  nn-clas.cpp
cpp/classifiers/rchip-clas/: Makefile  classify.cpp  classify.hpp  rchip-clas  rchip-clas.cpp
data/blob/: blob  tolabel
data/ilpd/: ILPD-features.csv  ILPD-targets.csv  ILPD.csv  ilpd.csv
data/synthetic/: synthetic-features.csv  synthetic-targets.csv  synthetic.csv
dev/Common/: graphTypes.cpp  graphTypes.hpp  printLoadedData.cpp  readFiles.cpp  readFiles.hpp  readGraph.cpp  stringHelpers.cpp  stringHelpers.hpp  writeFiles.cpp  writeFiles.hpp
dev/Filter/: Makefile  computeFilter.cpp  filter  filter.cpp
dev/GabrielGraph/: Makefile  computeGabrielGraph.cpp  gabrielGraph  gabrielGraph.cpp  multiVariableGabrielGraph  multiVariableGabrielGraph.cpp  readGraph.cpp
dev/LowDegreeVerticesFilter/: filter.cpp  lowDegreeVerticesFilter  lowDegreeVerticesFilter.cpp
dev/classifiers/Common/: Makefile  computeExperts.cpp  computeExperts.hpp  hyperplanes  hyperplanes.cpp
dev/classifiers/chip-clas/: Makefile  chip-clas  chip-clas.cpp  classify.cpp  classify.hpp
evaluate/: classifier_pb2.py  compile_py.sh  correct_labels.py  evaluate.py  generate.py  metrics.py  plot.py  plotset.py  print.py  synthetic_2d.py  synthetic_3d.py  synthetic_nd.py  train.py
golden/: Makefile  MultiVariableGabrielGraph_golden  MultiVariableGabrielGraph_golden.cpp
golden/Common/: graphTypes.cpp  graphTypes.hpp  printLoadedData.cpp  printLoadedData.hpp  readGraph.cpp  readGraph.hpp  stringHelpers.cpp  stringHelpers.hpp  writeFiles.cpp  writeFiles.hpp
golden/GabrielGraph/: Makefile  MultiVariableGabrielGraph  MultiVariableGabrielGraph.cpp  MultiVariableGabrielGraph_golden  MultiVariableGabrielGraph_golden.cpp  gabrielGraph.cpp  gabrielGraph.hpp  multiVariableGabrielGraph  multiVariableGabrielGraph.cpp  readGraph.cpp  readGraph.hpp  squaredDistance.cpp  squaredDistance.hpp
golden/GabrielGraph/output/: ILPD-edges.csv  ilpd.csv  iris.csv  synthetic-edges.csv  synthetic.csv
golden/LowDegreeVerticesFilter/: LowDegreeVerticesFilter  LowDegreeVerticesFilter.cpp  Makefile  buildGraph.cpp  buildGraph.hpp  filter.cpp  filter.hpp  graphTypes.hpp  lowDegreeVerticesFilter  lowDegreeVerticesFilter.cpp  readFiles.cpp  readFiles.hpp  readGraph.cpp  stringHelpers.cpp  stringHelpers.hpp  writeFiles.cpp  writeFiles.hpp
golden/LowDegreeVerticesFilter/output/: ILPD-edges_filtered.csv  ILPD-features_filtered.csv  ILPD-targets_filtered.csv  ilpd-filtered.csv  iris-features_edges_filtered.csv  iris-features_filtered.csv  iris-filtered.csv  iris-graph-filtered.csv  iris-targets_filtered.csv  synthetic-edges_filtered.csv  synthetic-features_filtered.csv  (+2 more)
golden/output/: iris-features_edges.csv
nn/: CMakeLists.txt
nn/label/: label.cpp
nn/train/: CMakeLists.txt  train.cpp
optimized/Common/: Makefile  classifier.pb.cc  classifier.pb.h  filter.hpp  gabrielGraph.hpp  readFiles.cpp  readFiles.hpp  stringHelpers.cpp  stringHelpers.hpp  test.cpp  types.hpp
optimized/chip/: Makefile
optimized/common/: CMakeLists.txt  classifier.pb.cc  classifier.pb.h  computeSVs.cpp  computeSVs.hpp  filenameHelpers.hpp  filter.cpp  filter.hpp  gabrielGraph.cpp  readFiles.cpp  readFiles.hpp  types.cpp  types.hpp  writeFiles.cpp  writeFiles.hpp
optimized/evaluate/: classifier_pb2.py  compile_py.sh  generate.py  print_data.py  train.py
optimized/nn/: CMakeLists.txt  label.cpp  train.cpp
optimized/proto/: classifier.proto  compile_cpp.sh
optimized/test_common/: CMakeLists.txt  printContainers.cpp  printContainers.hpp  test.cpp
proto/: classifier.proto
temp_aux/: expert.cpp  expert.hpp
testing_scripts/: generate_data.py  parse_files.py  paths.py  plots.py  visualize.py
(+3 files in other folders)
